@@ -24,8 +24,8 @@
 /**
  * @test
  * @summary Test that virtual threads are GC'ed
- * @compile --enable-preview -source ${jdk.version} Collectable.java
- * @run testng/othervm --enable-preview Collectable
+ * @enablePreview
+ * @run testng Collectable
  */
 
 import java.lang.ref.WeakReference;
