@@ -22,11 +22,18 @@
  */
 
 /*
- * @test
+ * @test id=platform
  * @summary Basic tests for ThreadFlock
  * @modules java.base/jdk.internal.misc
- * @compile --enable-preview -source ${jdk.version} ThreadFlockTest.java
- * @run testng/othervm --enable-preview ThreadFlockTest
+ * @enablePreview
+ * @run testng/othervm -DthreadFactory=platform ThreadFlockTest
+ */
+
+/*
+ * @test id=virtual
+ * @modules java.base/jdk.internal.misc
+ * @enablePreview
+ * @run testng/othervm -DthreadFactory=virtual ThreadFlockTest
  */
 
 import java.time.Duration;
@@ -46,6 +53,7 @@ import static org.testng.Assert.*;
 
 public class ThreadFlockTest {
     private ScheduledExecutorService scheduler;
+    private Object[][] threadFactories;
 
     @BeforeClass
     public void setUp() throws Exception {
@@ -54,7 +62,19 @@ public class ThreadFlockTest {
             thread.setDaemon(true);
             return thread;
         };
-        scheduler = Executors.newSingleThreadScheduledExecutor(factory);
+        this.scheduler = Executors.newSingleThreadScheduledExecutor(factory);
+
+        // thread factories
+        String value = System.getProperty("threadFactory");
+        List<ThreadFactory> list = new ArrayList<>();
+        if (value == null || value.equals("platform"))
+            list.add(Thread.ofPlatform().factory());
+        if (value == null || value.equals("virtual"))
+            list.add(Thread.ofVirtual().factory());
+        assertTrue(list.size() > 0, "No thread factories for tests");
+        this.threadFactories = list.stream()
+                .map(f -> new Object[] { f })
+                .toArray(Object[][]::new);
     }
 
     @AfterClass
@@ -64,12 +84,7 @@ public class ThreadFlockTest {
 
     @DataProvider(name = "factories")
     public Object[][] factories() {
-        var defaultThreadFactory = Executors.defaultThreadFactory();
-        var virtualThreadFactory = Thread.ofVirtual().factory();
-        return new Object[][] {
-                { defaultThreadFactory, },
-                { virtualThreadFactory, },
-        };
+        return threadFactories;
     }
 
     /**
@@ -381,7 +396,7 @@ public class ThreadFlockTest {
             AtomicBoolean done = new AtomicBoolean();
             Runnable task = () -> {
                 try {
-                    Thread.sleep(Duration.ofSeconds(1));
+                    Thread.sleep(Duration.ofMillis(50));
                     done.set(true);
                 } catch (InterruptedException e) { }
             };
@@ -431,7 +446,7 @@ public class ThreadFlockTest {
                 long startMillis = millisTime();
                 try {
                     flock.awaitAll(Duration.ofSeconds(2));
-                    fail();
+                    fail("awaitAll did not throw");
                 } catch (TimeoutException e) {
                     checkDuration(startMillis, 1900, 4000);
                 }
@@ -458,8 +473,8 @@ public class ThreadFlockTest {
             try {
                 for (int i = 0; i < 3; i++) {
                     try {
-                        flock.awaitAll(Duration.ofSeconds(1));
-                        fail();
+                        flock.awaitAll(Duration.ofMillis(50));
+                        fail("awaitAll did not throw");
                     } catch (TimeoutException expected) { }
                 }
             } finally {
@@ -488,11 +503,11 @@ public class ThreadFlockTest {
             try {
                 try {
                     flock.awaitAll(Duration.ofSeconds(0));
-                    fail();
+                    fail("awaitAll did not throw");
                 } catch (TimeoutException expected) { }
                 try {
                     flock.awaitAll(Duration.ofSeconds(-1));
-                    fail();
+                    fail("awaitAll did not throw");
                 } catch (TimeoutException expected) { }
             } finally {
                 thread.interrupt();
@@ -527,7 +542,7 @@ public class ThreadFlockTest {
             Thread.currentThread().interrupt();
             try {
                 flock.awaitAll();
-                fail();
+                fail("awaitAll did not throw");
             } catch (InterruptedException e) {
                 // interrupt status should be clear
                 assertFalse(Thread.currentThread().isInterrupted());
@@ -537,9 +552,9 @@ public class ThreadFlockTest {
             Thread.currentThread().interrupt();
             try {
                 flock.awaitAll(Duration.ofSeconds(30));
-                fail();
+                fail("awaitAll did not throw");
             } catch (TimeoutException e) {
-                fail();
+                fail("TimeoutException not expected");
             } catch (InterruptedException e) {
                 // interrupt status should be clear
                 assertFalse(Thread.currentThread().isInterrupted());
@@ -579,7 +594,7 @@ public class ThreadFlockTest {
             scheduleInterrupt(Thread.currentThread(), Duration.ofMillis(500));
             try {
                 flock.awaitAll();
-                fail();
+                fail("awaitAll did not throw");
             } catch (InterruptedException e) {
                 // interrupt status should be clear
                 assertFalse(Thread.currentThread().isInterrupted());
@@ -588,9 +603,9 @@ public class ThreadFlockTest {
             scheduleInterrupt(Thread.currentThread(), Duration.ofMillis(500));
             try {
                 flock.awaitAll(Duration.ofSeconds(30));
-                fail();
+                fail("awaitAll did not throw");
             } catch (TimeoutException e) {
-                fail();
+                fail("TimeoutException not expected");
             } catch (InterruptedException e) {
                 // interrupt status should be clear
                 assertFalse(Thread.currentThread().isInterrupted());
@@ -706,7 +721,7 @@ public class ThreadFlockTest {
 
             // schedule thread to invoke wakeup
             Thread thread2 = factory.newThread(() -> {
-                try { Thread.sleep(Duration.ofSeconds(1)); } catch (Exception e) { }
+                try { Thread.sleep(Duration.ofMillis(500)); } catch (Exception e) { }
                 flock.wakeup();
             });
             flock.start(thread2);
@@ -782,7 +797,7 @@ public class ThreadFlockTest {
         var exception = new AtomicReference<Exception>();
         Runnable sleepTask = () -> {
             try {
-                Thread.sleep(Duration.ofSeconds(1));
+                Thread.sleep(Duration.ofMillis(50));
             } catch (Exception e) {
                 exception.set(e);
             }
@@ -958,7 +973,7 @@ public class ThreadFlockTest {
             try (var flock2 = ThreadFlock.open("flock2")) {
                 try {
                     flock1.close();
-                    fail();
+                    fail("close did not throw");
                 } catch (RuntimeException e) {
                     assertTrue(e.toString().contains("Structure"));
                 }
